--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -33,7 +33,7 @@
                         </select>
                     </div>
                     <div id="ingridient-container" class="form-row">
-                        <label class="">Ingridients List:</label>
+                        <h4 class="page-title2">Ingridients List:</h4>
                     </div>
                     <div id="ingridients">
                         <div class="ingridient">
@@ -62,16 +62,18 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="tip-container">
-                            <h4 class="page-title2">Tips:</h4>
+                        <div class="tips-container">
+                            <h4 class="page-title2">Preparation Steps:</h4>
                             <div id="tips">
                                 <div class="tip">
-                                    <label class="tip-label">Tip 1</label>
-                                    <textarea class="form-control" rows="2" id="tip-text" placeholder="Tip explanation" required></textarea>
-                                    <button class="removeTip btn main-button-small" type="button">x</button>
+                                    <div class="top-tip">
+                                        <label class="tip-label">Tip 1</label>
+                                        <button class="removeTip btn main-button-small" type="button">x</button>
+                                    </div>
+                                    <textarea class="form-control" rows="2" id="preparation-tip" placeholder="Tip explanation" required></textarea>
                                 </div>
                             </div>
-                            <button class="appendTip´ btn main-button-small" type="button">+ Add Step</button>
+                            <button class="appendTip btn main-button-small" type="button">+ Add Tip</button>
                         </div>
                     </div>
                 </div>
