--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1308,6 +1308,9 @@ form p {
 #new-recipe-page {
   padding-top: 60px;
 }
+#new-recipe-page .page-title2 {
+  margin-bottom: 30px;
+}
 #new-recipe-page .lead {
   font-size: 14px;
 }
@@ -1365,38 +1368,27 @@ form p {
   width: 40px;
 }
 
-.steps-container {
+.steps-container, .tips-container {
   width: 100%;
 }
 
-.step {
+.step, .tip {
   width: 100%;
   display: flex;
   flex-direction: column;
 }
-.step .main-button-small {
+.step .main-button-small, .tip .main-button-small {
   width: 30px;
   padding: 0px 0px;
 }
-.step .form-control {
+.step .form-control, .tip .form-control {
   margin-bottom: 15px;
 }
 
-.top-step {
+.top-step, .top-tip {
   width: 100%;
   justify-content: space-between;
   display: flex;
-  margin-bottom: 15px;
-}
-
-.tip {
-  width: 100%;
-  display: flex;
-}
-.tip .main-button-small {
-  width: 40px;
-}
-.tip .form-control {
   margin-bottom: 15px;
 }
 
