--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -42,7 +42,7 @@
                             <button class="removeIngridient btn main-button-small" type="button">x</button>
                         </div>
                     </div>
-                    <button class="appendIngridient btn main-button" type="button">+ Add Ingridient</button>
+                    <button class="appendIngridient btn main-button-small" type="button">+ Add Ingridient</button>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-preparation">
                     <div class="form-row">
