--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -21,8 +21,13 @@
     display: flex;
     margin-bottom: 20px;
     .form-control {
+        color: #000;
         margin-top: -8px;
         padding: 2px 10px;
+    }
+
+    textarea{
+        max-width: 100%!important;
     }
 
     .time-text {
