--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1327,8 +1327,12 @@ form p {
   margin-bottom: 20px;
 }
 .form-row .form-control {
+  color: #000;
   margin-top: -8px;
   padding: 2px 10px;
+}
+.form-row textarea {
+  max-width: 100% !important;
 }
 .form-row .time-text {
   width: 40px;
