Fadeout changed to remove, due to check if exist failure

--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -108,8 +108,8 @@
 
     &:hover,
     &:focus {
-        background: linear-gradient(to top, #51acea, #c471eb);
+        background: linear-gradient(to bottom, #51acea, #2e60eb);
         color: $main-button-color-hv;
-        border: 1px solid #c471eb;
+        border: 1px solid #51acea;
     }
 }
