--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -26,7 +26,7 @@
         padding: 2px 10px;
     }
 
-    textarea{
+    textarea {
         max-width: 100%!important;
     }
 
@@ -85,6 +85,7 @@
     flex-direction: column;
     .main-button-small {
         width: 30px;
+        height: 25px;
         padding: 0px 0px;
     }
     .form-control {
@@ -98,6 +99,7 @@
     justify-content: space-between;
     display: flex;
     margin-bottom: 15px;
+    height: 25px;
 }
 
 .main-button-small {
