--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -11,7 +11,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-details">
                     <h4 class="page-title2">Recipe Information:</h4>
                     <div class="form-row">
-                        <label class="">Title</label>
+                        <label>Title</label>
                         <input type="text" class="form-control" id="preparing-title" name="preparing-title" placeholder="Chocolate Cake" required>
                     </div>
                     <div class="form-row">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <label class="">Difficulty</label>
+                        <label>Difficulty</label>
                         <select class="form-control form-control-lg">
                             <option select>Choose level</option>
                             <option>Easy</option>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="form-row">
                         <div class="tips-container">
-                            <h4 class="page-title2">Preparation Steps:</h4>
+                            <h4 class="page-title2">Additional Tips:</h4>
                             <div id="tips">
                                 <div class="tip">
                                     <div class="top-tip">
