Quick fix - card body padding added

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -18,7 +18,7 @@
                     </h3>
                 </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">Why this app is called "Baking Master"... hmm..<br>I think in everybody's life there is a time when they want to develope their skills in different ways. I love cooking, my parents always have been telling me stories when I was a little
+                    <div class="card-body extra-padding">Why this app is called "Baking Master"... hmm..<br>I think in everybody's life there is a time when they want to develope their skills in different ways. I love cooking, my parents always have been telling me stories when I was a little
                         kid, all covered in flour, after trying to bake something. I always dreamed to become a chef of any of the restaurant, sadly truth quickly came to reality, as I wasn't so good, as I though I am.. I never stopped cooking! Doing
                         this project I wanted to share a piece of myself and advice you to "Never quit your dreams". As I can't become a Chef of any fameous restaurant, it doesn't mean I can't be a Baking Master of my Home!
                     </div>
@@ -31,7 +31,7 @@
                     </h3>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
+                    <div class="card-body extra-padding">
                         People are asking, "But.., Whats Is All About?". It's realy simple. This app is giving you opportunity to become a Baking Master of your home. You can search through all different types of recipes. You are able to create an account, which will let you
                         store your all loved recipes in favourite list. You can also create your own recipes to share them to the World.
                     </div>
@@ -44,7 +44,7 @@
                     </h3>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">I tried to create nice and clear design in this project. I am trying to create responsive design webistes, if you will find something that isn't right, it's not reacting like you think it should, I will do appriciate your feedback.
+                    <div class="card-body extra-padding">I tried to create nice and clear design in this project. I am trying to create responsive design webistes, if you will find something that isn't right, it's not reacting like you think it should, I will do appriciate your feedback.
                         I always want to imporve my skills and better understand user expirience and user interface. I've created static navigation with nice and smooth dropdown navigation for smaller size devices. Coloristic was chosen randomly by matching
                         best contrast for the colors, there is a main "Radical Red" color contrasting on white color and also accent color is "Verdigris" (blue/green). This project was not based on any other projects design.
                     </div>
@@ -57,7 +57,7 @@
                     </h3>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                    <div class="card-body">
+                    <div class="card-body extra-padding">
                         <ul class="have-fun-rules">
                             <li class="rule-link">Rule 1: Have fan!</li>
                             <li class="rule-link">Rule 2: Have fan!</li>
@@ -73,7 +73,7 @@
                     </h3>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-                    <div class="card-body">This project is using EDAMAM API, it has been created for learning purposes only.<br>If you would like to contact me to discuss anything, do not hesitate and use contact form!
+                    <div class="card-body extra-padding">This project has been created for learning purposes only.<br>If you would like to contact me to discuss anything, do not hesitate and use contact form!
                     </div>
                 </div>
             </div>
