--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -7,7 +7,6 @@
     .lead {
         font-size: 16px;
     }
-
     .main-button {
         max-width: 150px;
     }
@@ -24,6 +23,10 @@
         color: #000;
         margin-top: -8px;
         padding: 2px 10px;
+    }
+
+    #preparing-image {
+        padding-top: 6px!important;
     }
 
     textarea {
@@ -53,15 +56,23 @@
     }
 }
 
+.sticky-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .ingridient-container,
 .steps-container,
 .tips-container {
+    height: auto;
     width: 100%;
 }
 
 .ingridient,
 .step,
 .tip {
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -82,8 +93,9 @@
     margin-bottom: 15px;
     height: 25px;
     .main-button-small {
-        margin-left: 8px;
-        margin-top: 4px;
+        margin-right: 9px;
+        margin-top: -7px;
+        height: 33px;
     }
 }
 
@@ -124,10 +136,23 @@
     }
 }
 
-
 @media (max-width: 768px) {
     .recipe-details,
     .recipe-preparation {
         padding: 0!important;
+    }
+}
+
+@media (max-width: 320px) {
+    .prepare-time {
+        flex-direction: column;
+    }
+    .sticky-container {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 15px;
+    }
+    .ingridient-inputs {
+        flex-direction: column;
     }
 }
