--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1331,6 +1331,9 @@ form p {
   margin-top: -8px;
   padding: 2px 10px;
 }
+.form-row #preparing-image {
+  padding-top: 6px !important;
+}
 .form-row textarea {
   max-width: 100% !important;
 }
@@ -1354,15 +1357,23 @@ form p {
   margin-left: 10px;
 }
 
+.sticky-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .ingridient-container,
 .steps-container,
 .tips-container {
+  height: auto;
   width: 100%;
 }
 
 .ingridient,
 .step,
 .tip {
+  height: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -1388,8 +1399,9 @@ form p {
   height: 25px;
 }
 .top-ingridient .main-button-small {
-  margin-left: 8px;
-  margin-top: 4px;
+  margin-right: 9px;
+  margin-top: -7px;
+  height: 33px;
 }
 
 .top-step,
@@ -1431,6 +1443,21 @@ form p {
   .recipe-details,
 .recipe-preparation {
     padding: 0 !important;
+  }
+}
+@media (max-width: 320px) {
+  .prepare-time {
+    flex-direction: column;
+  }
+
+  .sticky-container {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 15px;
+  }
+
+  .ingridient-inputs {
+    flex-direction: column;
   }
 }
 
