Media query for ingridient container added

--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -155,4 +155,12 @@
     .ingridient-inputs {
         flex-direction: column;
     }
+    .top-ingridient {
+        height: auto;
+    }
+
+    #ingridient-scale {
+        margin-left: 0;
+        max-width: 250px;
+    }
 }
