Form submit button added. Form input fields removed from page due to adding via buttons

--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -136,6 +136,11 @@
     }
 }
 
+.main-button-100w {
+    @extend .main-button;
+    max-width: 100% !important;
+}
+
 @media (max-width: 768px) {
     .recipe-details,
     .recipe-preparation {
