Margin added to submit button

--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -139,6 +139,7 @@
 .main-button-100w {
     @extend .main-button;
     max-width: 100% !important;
+    margin-top: 20px;
 }
 
 @media (max-width: 768px) {
