Difficulty level field changed to required

--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -40,8 +40,8 @@
                     </div>
                     <div class="form-row">
                         <label>Difficulty</label>
-                        <select class="form-control form-control-lg">
-                            <option select>Choose level</option>
+                        <select class="form-control form-control-lg" required>
+                            <option select></option>
                             <option>Easy</option>
                             <option>Medium</option>
                             <option>Hard</option>
