--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -47,11 +47,11 @@
                         </select>
                     </div>
                     <div class="form-row">
-                        <div class="ingridient-container">
-                            <h4 class="page-title2">Ingridients List:</h4>
-                            <div id="ingridients">
+                        <div class="ingredient-container">
+                            <h4 class="page-title2">Ingredients List:</h4>
+                            <div id="ingredients">
                             </div>
-                            <button class="appendIngridient btn main-button-small" type="button">+ Add Ingridient</button>
+                            <button class="appendIngredient btn main-button-small" type="button">+ Add Ingredient</button>
                         </div>
                     </div>
                 </div>
