Page title added

--- a/templates/pages/your-recipes.html
+++ b/templates/pages/your-recipes.html
@@ -1,5 +1,12 @@
 {% extends 'layout/base.html' %} {% set page = "your-recipes" %} {% block content %}
 <div class="container">
     <h1 class="hidden">Your Recpies</h1>
+    <div class="your-recipe-main">
+        <h2 class="page-title">Your Recipes : {{recipe_count}}</h2>
+    </div>
+
+
+
+
 </div>
 {% endblock %}
