Your recipes page file import added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,3 +34,4 @@
 @import 'page-styles/user-menu-blocks.scss';
 @import 'page-styles/error-page.scss';
 @import 'page-styles/add-recipe.scss';
+@import 'page-styles/your-recipes.scss';
