--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1497,5 +1497,8 @@ form p {
     max-width: 250px;
   }
 }
+#your-recipes-page {
+  padding-top: 60px;
+}
 
 /*# sourceMappingURL=style.css.map */
