--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -85,6 +85,14 @@
         font-size: 16px;
         margin-top: 20px;
     }
+
+    .difficulty-title {
+        text-transform: lowercase;
+        color: #51ACEA;
+        font-size: 14px;
+        margin-top: 10px;
+        font-weight: 500;
+    }
 }
 
 .card-bottom-section {
