--- a/static/css/style.css
+++ b/static/css/style.css
@@ -361,6 +361,13 @@ ul li:hover ul.dropdown-menu .menu-hr {
   font-size: 16px;
   margin-top: 20px;
 }
+.card-body .difficulty-title {
+  text-transform: lowercase;
+  color: #51ACEA;
+  font-size: 14px;
+  margin-top: 10px;
+  font-weight: 500;
+}
 
 .card-bottom-section {
   display: flex;
